Fix: All created projects now consistently clickable - Problem was due to mismatch in strings due to leading whitespace being preserved in projectElement string

--- a/src/styles/taskComponent.css
+++ b/src/styles/taskComponent.css
@@ -78,8 +78,8 @@
 .date {
     font-size: 10px;
     color: #db4c3f;
-    background-color: pink;
-    width: 80px;
+    /* background-color: pink; */
+    width: 55px;
     display: flex;
     justify-content: center;
 }
@@ -108,7 +108,6 @@
 }
 
 .title {
-    /* background-color: lightsalmon; */
     font-size: 14px;
     font-weight: 500;
     max-width: 350px;
@@ -191,6 +190,16 @@ svg path {
 }
 
 @media only screen and (max-width: 500px) {
+
+    .todo-item {
+        gap: 5px;
+        padding-left: 4px;
+        padding-right: 4px;
+    }
+    .edit-button, .delete-button {
+        height: 23px;
+        padding: 3px;
+    }
     .todo-item div:nth-child(2) {
         gap: 5px;
     }
